--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <script>(function(w,d,s,l,i){
   w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
   var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-5X6X58H');</script>
+})(window,document,'script','dataLayer','GTM-5J4R9F5');</script>
     <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="robots" content="noindex">
+    <link rel="shortcut icon" href="assets/icons/workfit.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-touch.js"></script>
@@ -16,10 +18,9 @@
     <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase-database.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
-
-    <!--<script src="/node_modules/angular-inview/angular-inview.js"></script>-->
-    <!--<script src="https://www.gstatic.com/firebasejs/ui/2.4.1/firebase-ui-auth__nl.js"></script>-->
-    <script src="assets/authui.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.js"></script>
+    <script src="services/angular-datepicker.js"></script>
+    <!--<script src="assets/authui.js"></script>-->
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
@@ -51,16 +52,16 @@
     <script src="controllers/functioneringsresults.js"></script>
     <script src="controllers/functioneringsafspraken.js"></script>
     <script src="controllers/functioneringsarchief.js"></script>
-    <script src="controllers/userdata.js"></script>
-    <script src="controllers/userlist.js"></script>
-    <script src="controllers/notifications-accept.js"></script>
+    <script src="controllers/pagina.js"></script>
+    <script src="controllers/rapportage.js"></script>
     <script src="controllers/0test.js"></script>
     <link rel="stylesheet" media="all" href="assets/style.css" />
     <link rel="stylesheet" media="all" href="assets/menu.css" />
+    <link rel="stylesheet" media="all" href="assets/datepicker.css" />
     <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-icons.min.css">
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/2.4.1/firebase-ui-auth.css" />
     <link rel="manifest" href="manifest.json">
-    <meta name="msapplication-TileImage" content="assets/icons/icon-144x144.png">
+    <meta name="msapplication-TileImage" content="assets/icons/workfit-144x144.png">
     <meta name="msapplication-TileColor" content="#2F3BA2">
   </head>
 
@@ -92,7 +93,7 @@
       var analytics = {landingspage: landingspage, user: ''};
     </script>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5X6X58H" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5J4R9F5" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
   </body>
 
